# excelx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/excelx/: Cargo.toml  README.md
crates/excelx-derive/: Cargo.toml  README.md
crates/excelx-derive/src/: lib.rs
crates/excelx-derive/tests/: derive_diagnostics.rs  excel_row_derive.rs
crates/excelx-derive/tests/ui/: enum.rs  enum.stderr  missing_header.rs  missing_header.stderr  missing_order.rs  missing_order.stderr  nested_option.rs  nested_option.stderr  tuple_struct.rs  tuple_struct.stderr  unsupported_integer.rs  unsupported_integer.stderr  unsupported_type.rs  unsupported_type.stderr
crates/excelx-integration-tests/: Cargo.toml
crates/excelx-integration-tests/src/: lib.rs
crates/excelx/examples/: derive_read_write.rs  manual_read_write.rs  multi_sheet.rs
crates/excelx/src/: column.rs  error.rs  lib.rs  read.rs  row.rs  sheet.rs  types.rs  write.rs
crates/excelx/tests/: compatibility_workbooks.rs  defaults_multi_sheet.rs  phase2.rs  read_write.rs  sheet_reading.rs
crates/excelx/tests/fixtures/: README.md
examples/: Cargo.toml  README.md
