[package]
name = "excelx-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macro for the excelx ExcelRow trait."
documentation = "https://docs.rs/excelx-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
excelx = { path = "../excelx", version = "0.3" }
trybuild = "1"
